--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "0.81.5",
+    "react-native-bouncy-checkbox": "^4.1.4",
     "react-native-calendars": "^1.1313.0",
     "react-native-css-interop": "^0.2.1",
     "react-native-element-dropdown": "^2.12.4",
