--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.10.1",
+    "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "expo": "~54.0.31",
     "expo-constants": "~18.0.13",
@@ -33,7 +35,9 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-step-indicator": "^1.0.3",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "zustand": "^5.0.10",
+    "expo-crypto": "~15.0.8"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
