--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -39,7 +39,8 @@
     "react-native-step-indicator": "^1.0.3",
     "react-native-worklets": "0.5.1",
     "toastify-react-native": "^7.2.3",
-    "zustand": "^5.0.10"
+    "zustand": "^5.0.10",
+    "expo-auth-session": "~7.0.10"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
